# ShellEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Component.md  CustomInspector.md  Doxyfile  Editor.md  GC.md  ImGUI.md  Multithreading.md  Physics.md  README.md  Reflection.md  RenderArchitecture.md  RenderGraph.md  Shader.md
Test/: AABBTest.hpp  AllocatorTest.hpp  CMakeLists.txt  ContainerTest.hpp  EventBusTest.hpp  GCTest.hpp  ObserverTest.hpp  OctreeTest.hpp  ReflectionTest.hpp  ShaderParserTest.hpp  SingletonTest.hpp  SpinLockTest.hpp  ThreadPoolTest.hpp  test.cpp
UserCode/: CMakeLists.txt  ComponentTest.cpp  ComponentTest.h  CreateManyObj.cpp  CreateManyObj.h  Export.h  RotateObject.cpp  RotateObject.h  Save.cpp  Save.h  UniformTest.cpp  UniformTest.h  main.cpp
resource/ProjectTemplate/: CMakeLists.txt  CMakePresets.json  PCH.h  ProjectSetting.json
resource/ProjectTemplate/Assets/: SampleWorld.world
resource/ProjectTemplate/EditorSource/: CMakeLists.txt  RotateObjectInspector.cpp  RotateObjectInspector.h
resource/ProjectTemplate/Source/: CMakeLists.txt  RotateObject.cpp  RotateObject.h  main.cpp
src/: CMakeLists.txt  EngineInit.cpp  main.cpp
src/Core/: Asset.cpp  AssetBundle.cpp  AssetExporter.cpp  AssetImporter.cpp  AssetResolver.cpp  CMakeLists.txt  EngineThread.cpp  Event.cpp  EventBus.cpp  EventSubscriber.cpp  ExecuteProcess.cpp  FileLoader.cpp  FileSystem.cpp  GC.cpp  GCObject.cpp  GarbageCollection.cpp  ISerializable.cpp  Logger.cpp  ModuleLoader.cpp  Name.cpp  Observer.cpp  Plugin.cpp  Reflaction.cpp  Reflection.cpp  Resource.cpp  SObject.cpp  SObjectManager.cpp  Singleton.cpp  SpinLock.cpp  ThreadPool.cpp  ThreadSyncManager.cpp  UUID.cpp  Util.cpp
src/Core/Reflection/: Property.cpp  STypeInfo.cpp  TypeInfo.cpp
src/Editor/: AssetDatabase.cpp  AssetExtensions.cpp  AssetImporterRegistry.cpp  BuildSystem.cpp  CMakeLists.txt  CommandHistory.cpp  CustomInspector.cpp  DefaultHierarchy.cpp  DefaultInspector.cpp  EditorLoop.cpp  EditorOutlinePass.cpp  EditorPickingPass.cpp  EditorPostOutlinePass.cpp  EditorRenderer.cpp  EditorResource.cpp  EditorUI.cpp  EditorWorld.cpp  ExplorerUI.cpp  Hierarchy.cpp  Inspector.cpp  MaterialLoader.cpp  MeshLoader.cpp  Meta.cpp  ModelLoader.cpp  OutlineComponent.cpp  Project.cpp  ProjectSetting.cpp  ShaderLoader.cpp  TextureLoader.cpp  TransformEditorCommand.cpp  UI.cpp  Viewport.cpp
src/Editor/Component/: EditorControl.cpp  EditorUI.cpp  OutlineComponent.cpp
src/Editor/UI/: AssetExplorer.cpp  BundleViewer.cpp  DefaultHierarchy.cpp  DefaultInspector.cpp  ExplorerUI.cpp  FontGeneratorUI.cpp  Hierarchy.cpp  Inspector.cpp  Project.cpp  ProjectExplorer.cpp  ProjectSettingUI.cpp  Viewport.cpp
src/Game/: AssetLoaderFactory.cpp  BinaryObject.cpp  CMakeLists.txt  Collision.cpp  ComponentLoader.cpp  ComponentModule.cpp  EditorUI.cpp  EditorWorld.cpp  GUIPass.cpp  GUITexture.cpp  GameManager.cpp  GameObject.cpp  GameRenderer.cpp  GameThread.cpp  ILight.cpp  ImGUI.cpp  ImGUImpl.cpp  Input.cpp  MaterialAsset.cpp  MaterialLoader.cpp  MeshAsset.cpp  MeshLoader.cpp  ModelAsset.cpp  ModelLoader.cpp  Object.cpp  Octree.cpp  Prefab.cpp  RenderThread.cpp  ResourceManager.cpp  SMath.cpp  ScriptableObject.cpp  ShaderAsset.cpp  ShaderBuilder.cpp  ShaderLoader.cpp  ShaderPassAsset.cpp  TextObject.cpp  TextureAsset.cpp  TextureLoader.cpp  UICamera.cpp  UIPass.cpp  (+6 more)
src/Game/Asset/: BinaryAsset.cpp  BinaryLoader.cpp  ComputeShaderAsset.cpp  ComputeShaderLoader.cpp  FontAsset.cpp  FontGenerator.cpp  FontLoader.cpp  MaterialAsset.cpp  MaterialLoader.cpp  MeshAsset.cpp  MeshLoader.cpp  ModelAsset.cpp  ModelLoader.cpp  PrefabAsset.cpp  PrefabLoader.cpp  ScriptableObjectAsset.cpp  ScriptableObjectLoader.cpp  ShaderAsset.cpp  ShaderLoader.cpp  SoundAsset.cpp  SoundLoader.cpp  TextAsset.cpp  TextLoader.cpp  TextureAsset.cpp  TextureLoader.cpp  WorldAsset.cpp  WorldLoader.cpp
src/Game/Component/: BoxCollider.cpp  Camera.cpp  CapsuleCollider.cpp  Client.cpp  Collider.cpp  Component.cpp  ConvexCollider.cpp  DebugRenderer.cpp  DirectionalLight.cpp  EditorCamera.cpp  EditorControl.cpp  FollowTarget.cpp  ICollider.cpp  ILight.cpp  LineRenderer.cpp  MeshRenderer.cpp  NetworkComponent.cpp  PickingCamera.cpp  PickingRenderer.cpp  PointLight.cpp  RigidBody.cpp  Server.cpp  SphereCollider.cpp  TestComponent.cpp  TestComputeShader.cpp  TextRenderer.cpp  Transform.cpp  UI.cpp  UdpClient.cpp  UdpServer.cpp  UniformTest.cpp
src/Network/: CMakeLists.txt  Client.cpp  MessageQueue.cpp  NetworkContext.cpp  Packet.cpp  PlayerInfo.cpp  Server.cpp  StringPacket.cpp  TcpListener.cpp  TcpSocket.cpp  UdpSocket.cpp
src/Physics/: CMakeLists.txt  PhysWorld.cpp  Ray.cpp
src/Render/: AABB.cpp  Bounding.cpp  BufferFactory.cpp  CMakeLists.txt  Camera.cpp  CommandBuffer.cpp  ComputeShader.cpp  ComputeShaderLexer.cpp  ComputeShaderParser.cpp  Drawable.cpp  DrawableFactory.cpp  Font.cpp  Framebuffer.cpp  Material.cpp  MaterialData.cpp  MaterialPropertyBlock.cpp  Mesh.cpp  Model.cpp  RenderDataManager.cpp  RenderPipeline.cpp  RenderTagList.cpp  RenderTarget.cpp  RenderTexture.cpp  Renderer.cpp  ScriptableRenderPass.cpp  ScriptableRenderer.cpp  Shader.cpp  ShaderAST.cpp  ShaderAttribute.cpp  ShaderBuilder.cpp  ShaderCreateInfo.cpp  ShaderGenerator.cpp  ShaderLexer.cpp  ShaderLoader.cpp  ShaderParser.cpp  ShaderPass.cpp  ShaderPassBuilder.cpp  ShadowMapManager.cpp  ShelfPacker.cpp  SkinnedMesh.cpp  (+16 more)
src/Render/Mesh/: CapsuleMesh.cpp  Grid.cpp  Plane.cpp
src/Render/RenderPass/: CombinePass.cpp  CopyPass.cpp  DepthPass.cpp  SSAOPass.cpp  ShadowMapPass.cpp  TransparentPass.cpp
src/Render/VulkanImpl/: VMA.cpp  VulkanBasePass.cpp  VulkanBuffer.cpp  VulkanCameraBuffers.cpp  VulkanCommandBuffer.cpp  VulkanCommandBufferPool.cpp  VulkanComputePipeline.cpp  VulkanComputePipelineManager.cpp  VulkanContext.cpp  VulkanDescriptorPool.cpp  (+22 more)
src/Sound/: CMakeLists.txt  OggLoader.cpp  SoundBuffer.cpp  SoundClip.cpp  SoundSource.cpp  SoundSourcePool.cpp  SoundSystem.cpp  WavLoader.cpp
src/Window/: CMakeLists.txt  Event.cpp  Window.cpp  WindowFactory.cpp  WindowImpl.cpp
(+478 files in other folders)
